# tomodo

./: .gitignore  LICENSE  Makefile  README.md  devcontainer.json  pyproject.toml  requirements.txt
.github/workflows/: build-and-publish-om-server.yml  build-and-publish-om.yml  homebrew-build-amd.yml  homebrew-build-arm.yml  homebrew-build.yml  integration-tests.yml  persist-mongo-tags.yml  publish-atlas-image.yml  publish.yml  pypi-build.yml  tests-base.yml  unit-tests.yml
config/: demo.yaml
docker/: om-server.dockerfile  om.dockerfile  tomodo-atlas-v1.dockerfile  tomodo-atlas.dockerfile
docker/scripts/: config-om.sh  dl-om.sh
scripts/: init-dev-container.sh  packager.py  test_runner.py
tests/common/: test_config.py  test_upgrader.py  test_util.py
tests/integration/: test_deployment_creation.py
tests/unit/: conftest.py  test_cmd.py  test_functional.py
tests/unit/common/: test_cleaner.py  test_provisioner.py  test_reader.py  test_starter.py  test_util.py
tomodo/: __init__.py  cmd.py  functional.py  packager.py
tomodo/cli/: ops_manager.py  provision.py  tags.py
tomodo/common/: __init__.py  base_provisioner.py  cleaner.py  config.py  data_migrator.py  errors.py  models.py  om_provisioner.py  om_server_provisioner.py  ops_manager.py  provisioner.py  reader.py  starter.py  state.py  tag_manager.py  upgrader.py  util.py
tomodo/models/: __init__.py  deployment.py
