[tool.poetry]
name = "tomodo"
version = "1.0.2"
description = "A CLI tool to control MongoDB deployments on Docker"
authors = ["MongoDB PS <yuvi.herziger@mongodb.com>"]
readme = "README.md"
homepage = "https://github.com/mongodb-ps/ce-tomodo-docker"
repository = "https://github.com/mongodb-ps/ce-tomodo-docker"
packages = [{ include = "tomodo" }]
license = "MIT"
keywords = ["mongodb", "docker", "upgrade", "python", "cli"]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
docker = "^7.0.0"
typer = { extras = ["all"], version = "^0.9.0" }
ruamel-yaml = "^0.17.32"
unique-names-generator = "^1.0.2"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
pyinstaller = "^6.3.0"

[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tomodo = "tomodo.cmd:run"
build-amd64 = "scripts.packager:install_amd64"
build-arm64 = "scripts.packager:install_arm64"
ci-unit-tests = "scripts.test_runner:ci"
local-unit-tests = "scripts.test_runner:local"
